--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,15 @@
 {
-  "name": "oasp-js",
+  "name": "richcleintschool-sample",
   "version": "0.0.1",
   "dependencies": {
-    "modernizr": "~2.6.2",
-    "respond": "~1.1.0",
     "bootstrap": "~3.2.0",
-    "angular-ui-bootstrap-bower": "0.11.2",
-    "angular": "1.2.25",
-    "angular-route": "1.2.25"
+    "angular": "1.2.26"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.25"
+    "angular-mocks": "1.2.26"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": ">=1"
+  }
 }
