simple version - final commit

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,14 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css,/app/less:/a
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+file.reference.richwebclient-sample=.
 file.reference.rwc-oasp4js-app-template=.
 files.encoding=UTF-8
+grunt.action.build=build
+grunt.action.clean=clean
+grunt.action.rebuild=clean build
 site.root.folder=${file.reference.rwc-oasp4js-app-template}
+start.file=app/index.html
+web.context.root=/sample
