--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "~0.4.5",
+    "grunt-connect-proxy": "^0.1.10",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.9.0",
