--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "ng-directives-demystified",
-  "description": "AngularJS Directives Demystified",
-  "author": "Tomasz Bialecki, Marek Matczak",
-  "version": "0.0.1",
-  "devDependencies": {
-    "bower": "^1.3.12",
-    "grunt": "~0.4.5",
-    "grunt-connect-proxy": "^0.1.10",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.9.0",
-    "grunt-wiredep": "^1.9.0",
-    "karma": "^0.12.24",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-jasmine": "^0.2.2",
-    "karma-ng-html2js-preprocessor": "^0.1.1",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
-  },
-  "engine": "node >= 0.6.6",
-  "scripts": {
-    "postinstall": "bower install -F",
-    "test": "grunt test:ci"
-  }
+    "name": "richwebclient",
+    "description": "Richwebclient",
+    "author": "Tomasz Bialecki, Jaroslaw Ratajski, Marek Matczak",
+    "version": "0.0.1",
+    "devDependencies": {
+        "bower": "^1.3.12",
+        "grunt": "~0.4.5",
+        "grunt-connect-proxy": "^0.1.10",
+        "grunt-contrib-connect": "^0.8.0",
+        "grunt-contrib-less": "~0.11.1",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-karma": "^0.9.0",
+        "grunt-wiredep": "^1.9.0",
+        "karma": "^0.12.24",
+        "karma-chrome-launcher": "^0.1.5",
+        "karma-jasmine": "^0.2.2",
+        "karma-ng-html2js-preprocessor": "^0.1.1",
+        "karma-phantomjs-launcher": "^0.1.4",
+        "load-grunt-tasks": "^0.4.0",
+        "time-grunt": "^0.3.1"
+    },
+    "engine": "node >= 0.6.6",
+    "scripts": {
+        "postinstall": "bower install -F",
+        "test": "grunt test:ci"
+    }
 }
