--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,16 @@
 {
-  "name": "richcleintschool-sample",
-  "version": "0.0.1",
-  "dependencies": {
-    "bootstrap": "~3.2.0",
-    "angular": "1.2.26"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.2.26"
-  },
-  "appPath": "app",
-  "resolutions": {
-    "angular": ">=1"
-  }
+    "name": "richcleintschool-sample",
+    "version": "0.0.1",
+    "dependencies": {
+        "bootstrap": "~3.2.0",
+        "angular": "1.2.26",
+        "angular-route": "1.2.26"
+    },
+    "devDependencies": {
+        "angular-mocks": "1.2.26"
+    },
+    "appPath": "app",
+    "resolutions": {
+        "angular": ">=1"
+    }
 }
