--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,6 @@
 {
-  "name": "richcleintschool-sample",
+  "name": "rich web client school - sample app",
   "version": "0.0.1",
-  "dependencies": {
-    "bootstrap": "~3.2.0",
-    "angular": "1.2.26"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.2.26"
-  },
   "appPath": "app",
-  "resolutions": {
-    "angular": ">=1"
-  }
+  "dependencies": {}
 }
