--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,7 @@
   "name": "richcleintschool-sample",
   "version": "0.0.1",
   "dependencies": {
-    "bootstrap": "~3.2.0",
-    "angular": "1.2.26"
+    "bootstrap-less": "~3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.26"
