--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "richcleintschool-sample",
   "version": "0.0.1",
   "dependencies": {
-    "bootstrap": "~3.2.0",
+    "bootstrap-less": "~3.2.0",
     "angular": "1.2.26"
   },
   "devDependencies": {
